fix: lombok upgrade